variables.Variables.scala.error
Compilation error:
Variables:7: error: not found: type x
backward(steps:x) 
               ^Variables:7: error: not found: value steps
backward(steps:x) 
         ^